test: drop IntelliJ warnings across integration tests
- Unused lambda parameters: c -> {} to _ -> {}
- @SuppressWarnings("SameParameterValue") on private helpers always
  called with the same argument
- List.get(0) -> List.getFirst()
- Drop an unnecessary regex escape (]\\( -> ]\\()
- Drop a redundant throws IOException (writeOracle fully catches it)
- Delete InspectForTest: permanently @Disabled, required manually
  downloading /tmp/for.vortex and /tmp/rle.vortex, never ran in CI